--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   }
